# TRP1-Week3-Document-Intelligence-Refinery

./: DOMAIN_NOTES.md  OMAIN_NOTES.md  README.md  guide.md  guide1.md  main.py  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/pageindex/: CBE ANNUAL REPORT 2023-24.pdf_pageindex.json
.refinery/profiles/: 015615194bb89269.json  01fde00160a4c4cb.json  02eb5911551dd49c.json  07773725f017952a.json  0c380c0373c72f3d.json  1f6e207f6ead5c47.json  2013-E.C-Assigned-regular-budget-and-expense.pdf.json  2013-E.C-Audit-finding-information.pdf.json  2013-E.C-Procurement-information.pdf.json  2018_Audited_Financial_Statement_Report.pdf.json  20191010_Pharmaceutical-Manufacturing-Opportunites-in-Ethiopia_VF.pdf.json  2019_Audited_Financial_Statement_Report.pdf.json  2020_Audited_Financial_Statement_Report.pdf.json  2021_Audited_Financial_Statement_Report.pdf.json  2022_Audited_Financial_Statement_Report.pdf.json  29361b1046eddc05.json  2afb70ea420fccf0.json  30ef99ba2d11248a.json  343b6f6943443fd9.json  34af505f889254b0.json  37166661cdd829b9.json  45204196085070b8.json  5287f02fe7ba24da.json  59618729f54fde3d.json  5c394a1cc09e346c.json  64fd08de6605671d.json  660a49311bbc9759.json  6730564dd1718e9d.json  692923ffdba326d8.json  6f59247755eedbd7.json  7e92a271fa9fc473.json  83947550a430e205.json  878f0f87316028ad.json  87d1209dc238c2d4.json  8ebfab7c7766a747.json  8f64c62c169df714.json  8f9d33a6ca5e0dcf.json  9267a1698e0c49b9.json  (+25 more)
rubric/: extraction_rules.yaml
scripts/: ingest_12.py
tests/: conftest.py  test_extraction.py  test_indexer.py  test_triage.py
(+22 files in other folders)
